objects/bofc__BOFCObjectLimApex__c.object
<CustomObject>
    <fields>
        <fullName>bofc__Active_Lookup_Filters_max__c</fullName>
        <label>#Active Lookup Filters (max)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Active_Lookup_Filters_used__c</fullName>
        <label>#Active Lookup Filters (used)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Active_Validation_Rules_max__c</fullName>
        <label>#Active Validation Rules (max)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Active_Validation_Rules_used__c</fullName>
        <label>#Active Validation Rules (used)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Active_Workflow_Rules_max__c</fullName>
        <label>#Active Workflow Rules (max)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Active_Workflow_Rules_used__c</fullName>
        <label>#Active Workflow Rules (used)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Approval_Processes_max__c</fullName>
        <label>#Approval Processes (max)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Approval_Processes_used__c</fullName>
        <label>#Approval Processes (used)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Custom_Fields_Used__c</fullName>
        <label>#Custom Fields (Used)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Custom_Fields_max__c</fullName>
        <label>#Custom Fields (max)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Custom_Relationship_Fields_max__c</fullName>
        <label>#Custom Relationship Fields (max)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Custom_Relationship_Fields_used__c</fullName>
        <label>#Custom Relationship Fields (used)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__ObID__c</fullName>
        <label>ObID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__ObName__c</fullName>
        <label>ObName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Rollup_Summary_Fields_max__c</fullName>
        <label>#Rollup Summary Fields (max)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Rollup_Summary_Fields_used__c</fullName>
        <label>#Rollup Summary Fields (used)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Sharing_Rules_Both_OwnerCriteria_max__c</fullName>
        <label>#Sharing Rules (Both Owner-Criteria) max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Sharing_Rules_Both_Owner_Criteria_used__c</fullName>
        <label>#Sharing Rules(Both Owner-Criteria) used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Sharing_Rules_Criteria_based_Only_used__c</fullName>
        <label>#Sharing Rules(Criteria-based Only) used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Sharing_Rules_Criteriabased_Only_max__c</fullName>
        <label>#Sharing Rules (Criteria-based Only) max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Total_Workflow_Rules_max__c</fullName>
        <label>#Total Workflow Rules max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Total_Workflow_Rules_used__c</fullName>
        <label>#Total Workflow Rules used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__VLOOKUP_Functions_max__c</fullName>
        <label>#VLOOKUP Functions max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__VLOOKUP_Functions_used__c</fullName>
        <label>#VLOOKUP Functions used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BOFCObjectLimApex</label>
    <nameField>
        <displayFormat>BOI-{0000}</displayFormat>
        <label>BOFCObjectLimits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOFCObjectLimApexs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>